metadata/force-app/main/default/objects/CustomName_PrXAi__c/CustomName_PrXAi__c.object-meta.xml
<CustomObject>
    <description>Description_OfVLF</description>
    <label>CustomLabel_jAMCY</label>
    <nameField>
        <label>CustomLabel_jAMCY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_jAMCYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>