metadata/force-app/main/default/objects/CustomName_PrXAi__c/fields/CustomField_kjTZb__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kjTZb__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTzEni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>