metadata/force-app/main/default/objects/CustomName_PrXAi__c/fields/CustomField_MUkqA__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MUkqA__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGdUbp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>